# pymcpx

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  generate_service.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml  release.yml  tests.yml
.skills/: architecture.md  coding.md  contributing.md  langchain.md  mcp.md  pydantic.md  releases.md  security.md  services.md  testing.md
demos/: .env.example  requirements.txt
demos/aviationstack/: flight_tracking.ipynb
demos/calculator/: advanced_calculations.ipynb  basic_operations.ipynb
demos/cataas/: cat_images.ipynb
demos/catfacts/: basic_facts.ipynb
demos/converter/: temperature_conversion.ipynb  unit_conversion.ipynb
demos/datetime/: timestamp_conversion.ipynb  timezone_tools.ipynb
demos/dogapi/: dog_images.ipynb
demos/ebird/: bird_observations.ipynb
demos/exchangeratehost/: exchange_rates.ipynb
demos/fixer/: exchange_rates.ipynb
demos/ipstack/: ip_geolocation.ipynb
demos/marketstack/: financial_products.ipynb  marketstack_explorer.ipynb  stock_market_data.ipynb
demos/numverify/: phone_validation.ipynb
demos/screenshotlayer/: capture_screenshot.ipynb
demos/shared/: __init__.py  llm_setup.py
demos/weatherstack/: weather_data.ipynb
demos/zenserp/: serp_search.ipynb
pymcpx/: __init__.py  aviationstack.py  calculator.py  cataas.py  catfacts.py  converter.py  datetime.py  dogapi.py  ebird.py  exchangeratehost.py  fixer.py  ipstack.py  marketstack.py  numverify.py  screenshotlayer.py  weatherstack.py  zenserp.py
pymcpx/services/: __init__.py
pymcpx/services/aviationstack/: README.md  __init__.py  tools.py
pymcpx/services/aviationstack/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/aviationstack/tests/: test_aviationstack.py
pymcpx/services/calculator/: README.md  __init__.py  arithmetic_tools.py
pymcpx/services/calculator/tests/: __init__.py  test_calculator.py
pymcpx/services/cataas/: README.md  __init__.py  tools.py
pymcpx/services/cataas/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/cataas/tests/: test_cataas.py
pymcpx/services/catfacts/: README.md  __init__.py  tools.py
pymcpx/services/catfacts/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/catfacts/tests/: test_catfacts.py
pymcpx/services/converter/: README.md  __init__.py  models.py  tools.py  utils.py
pymcpx/services/converter/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/converter/tests/: __init__.py  test_converter.py
pymcpx/services/datetime/: README.md  __init__.py  models.py  tools.py  utils.py
pymcpx/services/datetime/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/datetime/tests/: __init__.py  test_datetime.py
pymcpx/services/dogapi/: README.md  __init__.py  tools.py
pymcpx/services/dogapi/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/dogapi/tests/: test_dogapi.py
pymcpx/services/ebird/: README.md  __init__.py  tools.py
pymcpx/services/ebird/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/ebird/tests/: test_ebird.py
pymcpx/services/exchangeratehost/: README.md  __init__.py  tools.py
pymcpx/services/exchangeratehost/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/exchangeratehost/tests/: test_exchangeratehost.py
pymcpx/services/fixer/: README.md  __init__.py  tools.py
pymcpx/services/fixer/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/fixer/tests/: test_fixer.py
pymcpx/services/ipstack/: README.md  __init__.py  tools.py
pymcpx/services/ipstack/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/marketstack/: README.md  __init__.py  tools.py
pymcpx/services/marketstack/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/marketstack/tests/: test_marketstack.py
pymcpx/services/numverify/: README.md  __init__.py  tools.py
pymcpx/services/numverify/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/numverify/tests/: test_numverify.py
pymcpx/services/screenshotlayer/: README.md  __init__.py  tools.py
pymcpx/services/screenshotlayer/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/screenshotlayer/tests/: test_screenshotlayer.py
pymcpx/services/weatherstack/: README.md  __init__.py  tools.py
pymcpx/services/weatherstack/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/weatherstack/tests/: test_weatherstack.py
pymcpx/services/zenserp/: README.md  __init__.py  tools.py
pymcpx/services/zenserp/SimulationEngine/: __init__.py  engine.py  models.py  utils.py
pymcpx/services/zenserp/tests/: test_zenserp.py
