[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcpx"
version = "0.1.0"
description = "MCP-compatible LangChain tools for AI agents — calculator, datetime, converter, and more."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PyMCPX Contributors" }]
keywords = ["mcp", "langchain", "tools", "ai", "agents", "calculator", "datetime", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Minimal core dependencies (no service-specific deps here)
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
calculator = [
    "langchain-core>=0.2",
]
datetime = [
    "langchain-core>=0.2",
]
converter = [
    "langchain-core>=0.2",
]
ipstack = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
marketstack = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
weatherstack = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
numverify = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
fixer = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
aviationstack = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
zenserp = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
screenshotlayer = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
exchangeratehost = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
catfacts = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
cataas = [
    "langchain-core>=0.2",
    "httpx>=0.27",
]
# Install all services
all = [
    "pymcpx[calculator]",
    "pymcpx[datetime]",
    "pymcpx[converter]",
    "pymcpx[ipstack]",
    "pymcpx[marketstack]",
    "pymcpx[weatherstack]",
    "pymcpx[numverify]",
    "pymcpx[fixer]",
    "pymcpx[aviationstack]",
    "pymcpx[zenserp]",
    "pymcpx[screenshotlayer]",
    "pymcpx[exchangeratehost]",
    "pymcpx[catfacts]",
    "pymcpx[cataas]",
]
# Development extras
dev = [
    "pymcpx[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pyupgrade>=3.15",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/pymcpx/pymcpx"
Repository = "https://github.com/pymcpx/pymcpx"
Issues = "https://github.com/pymcpx/pymcpx/issues"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["pymcpx"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces black, isort, flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations (partial)
    "RUF", # Ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "ANN401", # any type
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pymcpx"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = [
    "pymcpx/services",
]
asyncio_mode = "auto"
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["pymcpx"]
omit = ["*/tests/*", "*/SimulationEngine/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
